# adventofcode

./: README.md  adventofcode.cabal  stack.yaml
01/: 01a.hs  01b.hs
02/: 02.hs
03/: 03.hs
src/: Day01a.hs  Day01b.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Main.hs
src/01/: 01a.hs  01b.hs
src/02/: 02.hs
src/Common/: Test.hs
src/Year2018/: Day01a.hs  Day01b.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs
src/Year2019/: Day01.hs
