name:                adventofcode
version:             0.1.0.0
homepage:            https://github.com/andys8/adventofcode#readme
license:             MIT
license-file:        LICENSE
author:              andys8
maintainer:          example@example.com
copyright:           2018 andys8
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
description:         Advent of Code 2018
synopsis:            Advent of Code

executable adventofcode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , text
                       , containers


source-repository head
  type: git
  location: https://github.com/andys8/adventofcode

